# test-django-api

./: .gitignore  Dockerfile  Readme.md  db.sqlite3  docker-compose.yml  pyproject.toml
geoapp/: models.py  urls.py  views.py
geoapp/migrations/: 0001_initial.py
my_test_project/: settings.py  urls.py
