[tool.poetry]
name = "my-test-project"
version = "0.1.0"
description = ""
authors = ["Emmanuel Davidson"]
readme = "README.md"
packages = [{include = "my_test_project"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
celery = "^5.2.7"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
psycopg2 = "^2.9.5"
pip = "^23.1.2"
install = "^1.3.5"
markdown = "^3.4.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
